...
		>
			<Tabs.Screen
				name="index"
				listeners={tabPressListener}
				options={{
					title: 'Products',
					tabBarButtonTestID: 'pos-tab-products',
					tabBarIcon: ({ focused }) => (
						<Icon name="gifts" className={focused ? 'text-primary' : 'text-muted-foreground'} />
					),
				}}
			/>
			<Tabs.Screen
				name="cart"
				listeners={tabPressListener}
				options={{
					title: 'Cart',
					tabBarButtonTestID: 'pos-tab-cart',
					tabBarIcon: ({ focused }) => (
						<Icon
							name="cartShopping"
							className={focused ? 'text-primary' : 'text-muted-foreground'}
						/>
					),
...
