...
	}, [connectedSite, isReady, isProcessing, promptAsync]);

	const loading = siteConnectLoading || isProcessing;

	return (
		<Button
			testID="enter-demo-store-button"
			onPress={handleDemoLogin}
			disabled={loading}
			variant="ghost"
			size="sm"
			loading={loading}
		>
...
